[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/button.png" type="Texture" id=1]
[ext_resource path="res://scripts/movable_wall.gd" type="Script" id=2]
[ext_resource path="res://scenes/all_tilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/wall.png" type="Texture" id=4]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=3]
0/name = "wall.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="movable_wall" type="Node2D"]
script = ExtResource( 2 )

[node name="wall_tween" type="Tween" parent="."]

[node name="all_tilemap" parent="." instance=ExtResource( 3 )]
tile_set = SubResource( 3 )

[node name="button" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="button_sprite" type="Sprite" parent="button"]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="button_collider" type="CollisionShape2D" parent="button"]
shape = SubResource( 1 )

[node name="wall_timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="button" to="." method="_on_button_body_entered"]
[connection signal="body_exited" from="button" to="." method="_on_button_body_exited"]
[connection signal="timeout" from="wall_timer" to="." method="_on_wall_timer_timeout"]
